ejercicios dolar y palindromo resueltos